--- a/BlazorApp2/Client/wwwroot/index.html
+++ b/BlazorApp2/Client/wwwroot/index.html
@@ -56,6 +56,10 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="Location.js"> </script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>        window.onload = (() => {
+            CheckWaitingServiceWorker().then((x) => { console.log(x) }  );
+        });
+    </script>
 </body>
 
 </html>
